--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
-    "react-tabs": "^3.0.0"
+    "semantic-ui-react": "^0.87.1",
+    "typescript": "^3.4.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint .",
+    "validate": "npm ls"
   },
   "eslintConfig": {
     "extends": "react-app"
