--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@jsonforms/core": "^2.2.3",
+    "@jsonforms/examples": "^2.2.3",
+    "@jsonforms/material-renderers": "^2.2.3",
+    "@jsonforms/react": "^2.2.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.0.3",
     "react-scripts": "3.0.1",
+    "redux": "^4.0.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.87.1",
     "typescript": "^3.4.5"
