--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,7 @@
     "@jsonforms/material-renderers": "^2.2.3",
     "@jsonforms/react": "^2.2.3",
     "gh-pages": "^2.0.1",
+    "prettier": "1.17.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.3",
