Added first initial testing of SciDataTab

--- a/app/package.json
+++ b/app/package.json
@@ -8,6 +8,8 @@
     "@jsonforms/examples": "^2.2.3",
     "@jsonforms/material-renderers": "^2.2.3",
     "@jsonforms/react": "^2.2.3",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
     "gh-pages": "^2.0.1",
     "prettier": "1.17.1",
     "react": "^16.8.6",
