--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,9 @@ node_js:
   - 8
 cache:
   directories:
-    - node_modules
+  - node_modules
+  - packages/create-react-app/node_modules
+  - packages/react-scripts/node_modules
 script:
   - cd app
   - yarn run build
