--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,9 @@ node_js:
   - 8
 cache:
   directories:
-  - node_modules
-  - packages/create-react-app/node_modules
-  - packages/react-scripts/node_modules
+  - app/node_modules
+  - app/packages/create-react-app/node_modules
+  - app/packages/react-scripts/node_modules
 script:
   - cd app
   - yarn run build
