--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,6 @@ script:
   - cd app
   - yarn install
   - yarn run build
-  - yarn test
+  - yarn test --coverage
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
